fixed contrast

--- a/mtm6202/accessible-me/css/main.css
+++ b/mtm6202/accessible-me/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: #fff;
   margin: 0;
   padding: 0;
 }
